--- a/templates/pages/home.hbs
+++ b/templates/pages/home.hbs
@@ -1,5 +1,14 @@
 <div class="welcome-section">
-    
+ <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5eba73c6e16b7ec4363bc9599118d0f3";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+   
 </div>
 {{#each categories}}
     {{> category}}
