--- a/templates/pages/home.hbs
+++ b/templates/pages/home.hbs
@@ -8,7 +8,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-   
+   <meta name="baidu-site-verification" content="codeva-ccbSoNulSL" />
 </div>
 {{#each categories}}
     {{> category}}
